add Task interface and update task-input to emit Task objects

--- a/src/app/task-input/task-input.component.html
+++ b/src/app/task-input/task-input.component.html
@@ -1,4 +1,4 @@
 <form (ngSubmit)="onAddTask()">
-    <input type="text" placeholder="Add a new task..." [(ngModel)]="task" name="task" required />
+    <input type="text" placeholder="Add a new task..." [(ngModel)]="taskTitle" name="task" required />
     <button type="submit">Add Task</button>
 </form>
