--- a/src/app/task-list/task-list.component.html
+++ b/src/app/task-list/task-list.component.html
@@ -1,1 +1,10 @@
-<p>task-list works!</p>
+
+@for(task of tasks(); track task.id){
+  <div>
+    <input type="checkbox" [checked]="task.completed" title="completed" (change)="toggleTaskCompletion(task)" />
+    <span [ngClass]="{ 'completed': task.completed }">{{ task.title }}</span>
+    <button type=button (click)="onDeleteTask(task)">Delete</button>
+  </div>
+}@empty{
+  <p>No tasks available.</p>
+}
