add task-manager with state management and localStorage persistence

--- a/src/app/task-manager/task-manager.component.html
+++ b/src/app/task-manager/task-manager.component.html
@@ -1,1 +1,7 @@
-<p>task-manager works!</p>
+<app-task-input (addTask)="addTask($event)"></app-task-input>
+
+<app-task-list 
+    [tasks]="tasks"
+    (deleteTask)="deleteTask($event)" 
+    (toggleTask)="toggleTask($event)">
+</app-task-list>
