--- a/src/app/task-list/task-list.component.html
+++ b/src/app/task-list/task-list.component.html
@@ -1,10 +1,18 @@
-
 @for(task of tasks(); track task.id){
-  <div>
-    <input type="checkbox" [checked]="task.completed" title="completed" (change)="toggleTaskCompletion(task)" />
-    <span [ngClass]="{ 'completed': task.completed }">{{ task.title }}</span>
-    <button type=button (click)="onDeleteTask(task)">Delete</button>
-  </div>
+<div>
+
+  <input type="checkbox" [checked]="task.completed" title="completed" (change)="toggleTaskCompletion(task)" />
+  @if(isEditing(task)){
+  <input type="text" [value]="task.title" #editInput/>
+  <button type="button" (click)="saveEdit(task,editInput.value)">Save</button>
+  <button type="button" (click)="cancelEdit()">Cancel</button>
+  }@else{
+  <span [ngClass]="{ 'completed': task.completed }">{{ task.title }}</span>
+  <button type="button" (click)="startEdit(task)">Edit</button>
+  <button type=button (click)="onDeleteTask(task)">Delete</button>
+  }
+
+</div>
 }@empty{
-  <p>No tasks available.</p>
+<p>No tasks available.</p>
 }
