complete todo app with edit task functionality

--- a/src/app/task-manager/task-manager.component.html
+++ b/src/app/task-manager/task-manager.component.html
@@ -3,5 +3,6 @@
 <app-task-list 
     [tasks]="tasks"
     (deleteTask)="deleteTask($event)" 
-    (toggleTask)="toggleTask($event)">
+    (toggleTask)="toggleTask($event)"
+    (editTask)="editTask($event)">
 </app-task-list>
