--- a/src/app/task-manager/task-manager.component.html
+++ b/src/app/task-manager/task-manager.component.html
@@ -1,3 +1,8 @@
+<header>
+    <img src="logo.png" alt="Task Manager Icon" width="50" height="50">
+    <h1>Task Manager</h1>
+</header>
+
 <app-task-input (addTask)="addTask($event)"></app-task-input>
 
 <app-task-list 
