change tasks from array to signal

--- a/src/app/task-manager/task-manager.component.html
+++ b/src/app/task-manager/task-manager.component.html
@@ -6,7 +6,7 @@
 <app-task-input (addTask)="addTask($event)"></app-task-input>
 
 <app-task-list 
-    [tasks]="tasks"
+    [tasks]="tasks()"
     (deleteTask)="deleteTask($event)" 
     (toggleTask)="toggleTask($event)"
     (editTask)="editTask($event)">
