--- a/src/app/task-manager/task-manager.component.html
+++ b/src/app/task-manager/task-manager.component.html
@@ -3,7 +3,11 @@
     <h1>Task Manager</h1>
 </header>
 
-<app-task-input (addTask)="addTask($event)"></app-task-input>
+<app-task-input (addTask)="addTask($event)"
+                [taskToEdit]="taskToEdit()" 
+                (updatedTask)="saveChanges($event)"
+                (cancelEdit)="taskToEdit.set(null)">
+</app-task-input>
 
 <app-task-list 
     [tasks]="tasks()"
